tests/baselines/reference/acceptSymbolAsWeakType.errors.txt
tests/cases/compiler/acceptSymbolAsWeakType.ts(18,15): error TS2345: Argument of type 'null' is not assignable to parameter of type 'symbol'.


==== tests/cases/compiler/acceptSymbolAsWeakType.ts (1 errors) ====
    const s: symbol = Symbol('s');
    
    const ws = new WeakSet([s]);
    ws.add(s);
    ws.has(s);
    ws.delete(s);
    
    const wm = new WeakMap([[s, false]]);
    wm.set(s, true);
    wm.has(s);
    wm.get(s);
    wm.delete(s);
    
    const wr = new WeakRef(s);
    wr.deref();
    
    const f = new FinalizationRegistry<symbol>(() => {});
    f.register(s, null);
                  ~~~~
!!! error TS2345: Argument of type 'null' is not assignable to parameter of type 'symbol'.
    f.unregister(s);